inserted my name

--- a/sinfo/templates/index.html
+++ b/sinfo/templates/index.html
@@ -9,7 +9,7 @@
     <h2>HELLO SINFO</h2>
     <h3>attendees:</h3>
     <ul>
-      <li></li>
+      <li>Júlio Caineta</li>
     </ul>
   </body>
 </html>
